[package]
name = "job-dispatcher"
version = "0.2.0"
edition = "2021"
authors = ["sn99 <siddharthn.099@gmail.com>"]
description = "Rust crate to execute jobs in an async way"
keywords = ["dispatch", "windows", "async", "jobs", "task"]
readme = "README.md"
homepage = "https://github.com/sn99/job-dispatcher"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.24"
tokio = { version = "1.21.0", features = ["full"] }
